Fixed display for mobile devices Title rearranged and subtitle hidden via css magick. WSL size changes when on mobile.

--- a/src/themes/hugo-xmin/static/css/style.css
+++ b/src/themes/hugo-xmin/static/css/style.css
@@ -17,6 +17,25 @@ a:hover, a:active {
  text-decoration: underline;
 }
 
+/* Hide subtitle, rearrange on mobile devices */
+.wsl-logo{
+    width:10%;
+    height:auto;
+}
+.wsl-title{
+    display:inline;
+}
+@media (max-width:768px){
+    .wsl-logo{
+        width:25%;
+    }
+    .wsl-title{
+        display:block;
+    }
+    .sub-title{
+        display:none;
+    }
+}
 /* header and footer areas */
 .menu { 
   padding: 0;
